<?php
/**
 * Created by IntelliJ IDEA.
 * Author: flashytime
 * Date: 2018/9/11 16:49
 */

namespace DesignPatterns\Creational\FactoryMethod;

interface Logger
{
    public function log($message);
}
